<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.yanhuahealth.healthlauncher.ui.setting.SosSettingActivity">
    <include layout="@layout/navbar"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/first_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">
            <TextView
                android:id="@+id/first_label_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_size_large"
                android:textColor="@color/font_subtitle"
                android:text="1/3"/>
            <LinearLayout
                android:id="@+id/first_tip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_label_tv"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/icon_normal"
                        android:layout_height="@dimen/icon_normal"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_sos_phone"
                        android:contentDescription="@string/app_name"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="12dp"
                        android:orientation="vertical">
                        <TextView
                            style="@style/DefaultListItemTitle"
                            android:text="紧急电话联系人"/>
                        <TextView
                            style="@style/DefaultListItemSummary"
                            android:text="启用后可直接拨打电话"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_tip_layout">
                <TextView
                    android:id="@+id/add_call_contact_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_size_larger"
                    android:textColor="@color/font_clickable"
                    android:text="添加联系人"/>
                <LinearLayout
                    android:id="@+id/first_contact_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:id="@+id/call_contact_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp">
                        <ImageView
                            android:id="@+id/remove_call_contact_iv"
                            android:layout_width="@dimen/icon_normal"
                            android:layout_height="@dimen/icon_normal"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_allapp_remove"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@id/remove_call_contact_iv"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/call_contact_name_tv"
                                style="@style/DefaultListItemTitle"
                                android:text="联系人账号名"/>
                            <TextView
                                android:id="@+id/call_contact_phone_tv"
                                style="@style/DefaultListItemSummary"
                                android:text="联系人号码"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider"/>
                </LinearLayout>
            </FrameLayout>
            <Button
                android:id="@+id/to_second_btn"
                style="@style/BottomSingleBtn"
                android:layout_alignParentBottom="true"
                android:text="下一步"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <TextView
                android:id="@+id/second_label_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_size_large"
                android:textColor="@color/font_subtitle"
                android:text="2/3"/>
            <LinearLayout
                android:id="@+id/second_tip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_label_tv"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/icon_normal"
                        android:layout_height="@dimen/icon_normal"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_sos_phone"
                        android:contentDescription="@string/app_name"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="12dp"
                        android:orientation="vertical">
                        <TextView
                            style="@style/DefaultListItemTitle"
                            android:text="紧急短信联系人"/>
                        <TextView
                            style="@style/DefaultListItemSummary"
                            android:text="启用后可直接发送短信"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_tip_layout">
                <TextView
                    android:id="@+id/add_sms_contact_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/font_size_larger"
                    android:textColor="@color/font_clickable"
                    android:text="添加联系人"/>
                <LinearLayout
                    android:id="@+id/second_contact_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:id="@+id/sms_contact_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="12dp">
                        <ImageView
                            android:id="@+id/remove_sms_contact_iv"
                            android:layout_width="@dimen/icon_normal"
                            android:layout_height="@dimen/icon_normal"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_allapp_remove"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toLeftOf="@id/remove_sms_contact_iv"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/sms_contact_name_tv"
                                style="@style/DefaultListItemTitle"
                                android:text="联系人账号名"/>
                            <TextView
                                android:id="@+id/sms_contact_phone_tv"
                                style="@style/DefaultListItemSummary"
                                android:text="联系人号码"/>
                        </LinearLayout>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider"/>
                </LinearLayout>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/back_first_btn"
                    style="@style/BottomLeftBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/shortcut_bg_first_master"
                    android:text="上一步"/>
                <Button
                    android:id="@+id/to_third_btn"
                    style="@style/BottomRightBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:text="下一步"/>
            </LinearLayout>
        </RelativeLayout>

        <!-- three-->
        <RelativeLayout
            android:id="@+id/third_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_btn_height">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/third_label_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center_horizontal"
                        android:textSize="@dimen/font_size_large"
                        android:textColor="@color/font_subtitle"
                        android:text="3/3"/>
                    <LinearLayout
                        android:id="@+id/third_tip_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/third_label_tv"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="@dimen/icon_normal"
                                android:layout_height="@dimen/icon_normal"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_sos_sms"
                                android:contentDescription="@string/app_name"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="12dp"
                                android:orientation="vertical">
                                <TextView
                                    style="@style/DefaultListItemTitle"
                                    android:text="紧急短信内容"/>
                                <TextView
                                    style="@style/DefaultListItemSummary"
                                    android:text="@string/sos_third_summary"/>
                            </LinearLayout>
                        </LinearLayout>
                        <View
                            android:id="@+id/v1"
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/divider"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sms_help_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/third_tip_layout"
                        android:padding="12dp">
                        <EditText
                            android:id="@+id/help_sms_tv"
                            style="@style/DefaultListItemTitle"
                            android:text="@string/sos_sms"
                            android:background="@null"
                            android:textCursorDrawable="@null"
                            android:maxLength="70"/>
                    </LinearLayout>

                    <View
                        android:layout_below="@+id/sms_help_linear"
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider"/>
                    <LinearLayout
                        android:layout_below="@+id/sms_help_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/save_sms_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="30dp"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/font_size_larger"
                            android:textColor="@color/font_clickable"
                            android:text="保存信息"/>
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/back_second_btn"
                    style="@style/BottomLeftBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@color/shortcut_bg_first_master"
                    android:text="上一步"/>
                <Button
                    android:id="@+id/finish_btn"
                    style="@style/BottomRightBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:text="完成"/>
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>
</LinearLayout>
